--- a/auth-service/src/main/resources/application.yaml
+++ b/auth-service/src/main/resources/application.yaml
@@ -1,6 +1,15 @@
 spring:
+  config:
+    import: optional:file:.env[.properties]
   application:
     name: "auth-service"
+
+  datasource:
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+    driver-class-name: org.postgresql.Driver
   liquibase:
     change-log: classpath:/db/changelog/master.yaml
     enabled: true
+
