--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ version: '3.1'
 volumes:
   pg_demo:
 
-
 services:
   demo_db:
     image: postgres:18
@@ -16,3 +15,13 @@ services:
       - pg_demo:/var/lib/postgresql
     ports:
       - "127.0.0.1:5433:5432"
+
+  auth-service:
+    restart: always
+    build:
+      context: .  # Корень монорепозитория
+      dockerfile: ./auth-service/Dockerfile  # Путь к Dockerfile
+    ports:
+      - "8082:8080"
+    depends_on:
+      - demo_db
