--- a/auth-service/src/main/resources/application.yaml
+++ b/auth-service/src/main/resources/application.yaml
@@ -13,3 +13,7 @@ spring:
     change-log: classpath:/db/changelog/master.yaml
     enabled: true
 
+logging:
+  level:
+    org.springframework.boot.context.config: DEBUG
+    org.springframework.core.env: DEBUG
