Спрятал jwt secret

--- a/auth-service/src/main/resources/application.yaml
+++ b/auth-service/src/main/resources/application.yaml
@@ -18,3 +18,5 @@ logging:
     org.springframework.boot.context.config: DEBUG
     org.springframework.core.env: DEBUG
 
+JWT_SECRET: ${JWT_SECRET}
+
