--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,11 @@ version: '3.1'
 
 volumes:
   pg_auth:
+  kafka_data:
 
 services:
   auth_db:
+    container_name: auth_db
     image: postgres:18
     restart: always
     environment:
@@ -17,9 +19,10 @@ services:
       - "127.0.0.1:5433:5432"
 
   auth-service:
+    container_name: auth_service
     restart: always
     env_file:
-      - ./auth-service/.env
+      - .env
     build:
       context: .  # Корень монорепозитория
       dockerfile: ./auth-service/Dockerfile  # Путь к Dockerfile
@@ -27,3 +30,21 @@ services:
       - "8082:8080"
     depends_on:
       - auth_db
+
+  kafka:
+    image: apache/kafka:3.7.0
+    container_name: loan-kafka
+    ports:
+      - '9092:9092'
+    environment:
+      KAFKA_NODE_ID: 0
+      KAFKA_PROCESS_ROLES: controller,broker
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 0@kafka:9093
+
+      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,INTERNAL://:29092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,INTERNAL://kafka:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,INTERNAL:PLAINTEXT
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+    volumes:
+      - kafka_data:/var/lib/kafka/data
