--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -4,8 +4,8 @@ spring:
   application:
     name: "user-service"
   datasource:
-    url: ${DB_URL}
-    username: ${DB_USERNAME}
+    url: ${USER_DB_URL}
+    username: ${USER_DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
   liquibase:
